<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.CadastroFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backGroundColor">

        <View
            android:id="@+id/view3"
            android:layout_width="341dp"
            android:layout_height="598dp"
            android:background="@color/primaryColor"
            android:elevation="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nomeCadastro"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:hint="@string/nome_completo"
            android:inputType="textPersonName"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="@+id/view3"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toTopOf="@+id/view3"
            app:layout_constraintVertical_bias="0.131"
            android:autofillHints="@string/nome_completo" />

        <EditText
            android:id="@+id/steamCadastro"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:elevation="1dp"
            android:hint="@string/steam_id"
            android:inputType="textPersonName"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toBottomOf="@+id/nomeCadastro"
            android:autofillHints="@string/steam_id" />

        <EditText
            android:id="@+id/emailCadastro"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:elevation="1dp"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toBottomOf="@+id/steamCadastro"
            android:autofillHints="@string/e_mail"/>

        <EditText
            android:id="@+id/senhaCadastro"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:elevation="1dp"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toBottomOf="@+id/emailCadastro"
            android:autofillHints="@string/senha"/>

        <EditText
            android:id="@+id/telefoneCadastro"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:elevation="1dp"
            android:ems="10"
            android:hint="@string/telefone"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toBottomOf="@+id/senhaCadastro"
            android:autofillHints="@string/telefone"/>

        <EditText
            android:id="@+id/idadeCadastro"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:elevation="1dp"
            android:ems="10"
            android:hint="@string/idade"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toBottomOf="@+id/telefoneCadastro"
            android:autofillHints="@string/steam_id"/>

        <Button
            android:id="@+id/enviarBtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/primaryDarkColor"
            android:contentDescription="@string/botao_salvar"
            android:elevation="1dp"
            android:text="@string/enviar_button"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="@+id/view3"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toBottomOf="@+id/idadeCadastro" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:text="@string/cadastrar_view"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/nomeCadastro"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toTopOf="@+id/view3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>